--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script>
 
     </script>
